* Truncation. Fixed newline escaping (json_encode() doesn't escape control chars). Log to standard log if filing fails.

--- a/jsonlog.css
+++ b/jsonlog.css
@@ -3,6 +3,9 @@
  * JSON Log module.
  */
 
+div.form-item.form-type-textfield.form-item-jsonlog-truncate > input {
+  text-align: right;
+}
 fieldset#edit-jsonlog-fields div.fieldset-legend {
   background: none;
   text-transform: none;
